good styles, hot fixes!

--- a/module/Page/view/page/page/sell-pages.phtml
+++ b/module/Page/view/page/page/sell-pages.phtml
@@ -120,8 +120,7 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        $('body').css('height', 'auto');
-        
+        $('body').css('width', 'auto');
         $('.landing-section_2-image_table-row-cell-image').on('click', function () {
             $('.modal-content-image').attr('src', '/img/landing/' + $(this).data('id') + '.jpg');
         });
