hot little fixes

--- a/module/Page/view/page/page/m-research.phtml
+++ b/module/Page/view/page/page/m-research.phtml
@@ -92,8 +92,8 @@
     <div class="separator"></div>
 </div>
 
-<div class="body-block_7 magrin_top_20">
-    <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
-        <div class="body-button">Оформить заказ</div>
+<div class="body-block_7 magrin_top_10">
+    <a href="<?= $this->url('page', array('action' => 'contacts')) ?>">
+        <div class="body-button">Связаться с нами</div>
     </a>
 </div>
